--- a/ReviewWebsite2017/ReviewWebsite2017.csproj
+++ b/ReviewWebsite2017/ReviewWebsite2017.csproj
@@ -1,9 +1,110 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net452</TargetFramework>
     <RuntimeIdentifier>win7-x86</RuntimeIdentifier>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="wwwroot\about.html" />
+    <Content Include="wwwroot\contact.html" />
+    <Content Include="wwwroot\dummy\background%402x.jpg" />
+    <Content Include="wwwroot\dummy\background.jpg" />
+    <Content Include="wwwroot\dummy\figure%402x.jpg" />
+    <Content Include="wwwroot\dummy\figure.jpg" />
+    <Content Include="wwwroot\dummy\person-1%402x.jpg" />
+    <Content Include="wwwroot\dummy\person-1.jpg" />
+    <Content Include="wwwroot\dummy\person-2%402x.jpg" />
+    <Content Include="wwwroot\dummy\person-2.jpg" />
+    <Content Include="wwwroot\dummy\person-3%402x.jpg" />
+    <Content Include="wwwroot\dummy\person-3.jpg" />
+    <Content Include="wwwroot\dummy\person-4%402x.jpg" />
+    <Content Include="wwwroot\dummy\person-4.jpg" />
+    <Content Include="wwwroot\dummy\single-image%402x.jpg" />
+    <Content Include="wwwroot\dummy\single-image.jpg" />
+    <Content Include="wwwroot\dummy\slide-1%402x.jpg" />
+    <Content Include="wwwroot\dummy\slide-1.jpg" />
+    <Content Include="wwwroot\dummy\slide-2%402x.jpg" />
+    <Content Include="wwwroot\dummy\slide-2.jpg" />
+    <Content Include="wwwroot\dummy\slide-3%402x.jpg" />
+    <Content Include="wwwroot\dummy\slide-3.jpg" />
+    <Content Include="wwwroot\dummy\thumb-1%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-1.jpg" />
+    <Content Include="wwwroot\dummy\thumb-2%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-2.jpg" />
+    <Content Include="wwwroot\dummy\thumb-3%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-3.jpg" />
+    <Content Include="wwwroot\dummy\thumb-4%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-4.jpg" />
+    <Content Include="wwwroot\dummy\thumb-5%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-5.jpg" />
+    <Content Include="wwwroot\dummy\thumb-6%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-6.jpg" />
+    <Content Include="wwwroot\dummy\thumb-7%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-7.jpg" />
+    <Content Include="wwwroot\dummy\thumb-8%402x.jpg" />
+    <Content Include="wwwroot\dummy\thumb-8.jpg" />
+    <Content Include="wwwroot\fonts\font-awesome.min.css" />
+    <Content Include="wwwroot\fonts\fontawesome-webfont.eot" />
+    <Content Include="wwwroot\fonts\fontawesome-webfont.svg" />
+    <Content Include="wwwroot\fonts\fontawesome-webfont.ttf" />
+    <Content Include="wwwroot\fonts\fontawesome-webfont.woff" />
+    <Content Include="wwwroot\fonts\FontAwesome.otf" />
+    <Content Include="wwwroot\images\arrow%402x.png" />
+    <Content Include="wwwroot\images\arrow-gray%402x.png" />
+    <Content Include="wwwroot\images\arrow-gray.png" />
+    <Content Include="wwwroot\images\arrow.png" />
+    <Content Include="wwwroot\images\banner1.svg" />
+    <Content Include="wwwroot\images\banner2.svg" />
+    <Content Include="wwwroot\images\banner3.svg" />
+    <Content Include="wwwroot\images\banner4.svg" />
+    <Content Include="wwwroot\images\icon-contact-envelope%402x.png" />
+    <Content Include="wwwroot\images\icon-contact-envelope.png" />
+    <Content Include="wwwroot\images\icon-contact-globe%402x.png" />
+    <Content Include="wwwroot\images\icon-contact-globe.png" />
+    <Content Include="wwwroot\images\icon-contact-map%402x.png" />
+    <Content Include="wwwroot\images\icon-contact-map.png" />
+    <Content Include="wwwroot\images\icon-contact-message%402x.png" />
+    <Content Include="wwwroot\images\icon-contact-message.png" />
+    <Content Include="wwwroot\images\icon-contact-pencil%402x.png" />
+    <Content Include="wwwroot\images\icon-contact-pencil.png" />
+    <Content Include="wwwroot\images\icon-contact-phone%402x.png" />
+    <Content Include="wwwroot\images\icon-contact-phone.png" />
+    <Content Include="wwwroot\images\icon-contact-user%402x.png" />
+    <Content Include="wwwroot\images\icon-contact-user.png" />
+    <Content Include="wwwroot\images\logo%402x.png" />
+    <Content Include="wwwroot\images\logo.png" />
+    <Content Include="wwwroot\images\select%402x.png" />
+    <Content Include="wwwroot\images\select.png" />
+    <Content Include="wwwroot\index.html" />
+    <Content Include="wwwroot\joinus.html" />
+    <Content Include="wwwroot\js\app.js" />
+    <Content Include="wwwroot\js\ie-support\html5.js" />
+    <Content Include="wwwroot\js\ie-support\pie.htc" />
+    <Content Include="wwwroot\js\ie-support\respond.js" />
+    <Content Include="wwwroot\js\jquery-1.11.1.min.js" />
+    <Content Include="wwwroot\js\jquery-1.11.1.min.map" />
+    <Content Include="wwwroot\js\min\app-min.js" />
+    <Content Include="wwwroot\js\min\plugins-min.js" />
+    <Content Include="wwwroot\js\plugins.js" />
+    <Content Include="wwwroot\js\site.js" />
+    <Content Include="wwwroot\js\site.min.js" />
+    <Content Include="wwwroot\review.html" />
+    <Content Include="wwwroot\sass\layout\_content.scss" />
+    <Content Include="wwwroot\sass\layout\_footer.scss" />
+    <Content Include="wwwroot\sass\layout\_header.scss" />
+    <Content Include="wwwroot\sass\libs\bootstrap-grid\_grid.scss" />
+    <Content Include="wwwroot\sass\libs\bootstrap-grid\_mixins.scss" />
+    <Content Include="wwwroot\sass\libs\bootstrap-grid\_settings.scss" />
+    <Content Include="wwwroot\sass\libs\_components.scss" />
+    <Content Include="wwwroot\sass\libs\_global.scss" />
+    <Content Include="wwwroot\sass\libs\_mixins.scss" />
+    <Content Include="wwwroot\sass\libs\_normalize.scss" />
+    <Content Include="wwwroot\sass\libs\_settings.scss" />
+    <Content Include="wwwroot\sass\style.scss" />
+    <Content Include="wwwroot\single.html" />
+    <Content Include="wwwroot\style.css" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.1" />
@@ -14,6 +115,9 @@
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="wwwroot\sass\pages\" />
   </ItemGroup>
 
 </Project>
