CHanged the photos, removed thebullshit underneath it

--- a/ReviewWebsite2017/ReviewWebsite2017.csproj
+++ b/ReviewWebsite2017/ReviewWebsite2017.csproj
@@ -50,6 +50,7 @@
     <Content Include="wwwroot\fonts\fontawesome-webfont.ttf" />
     <Content Include="wwwroot\fonts\fontawesome-webfont.woff" />
     <Content Include="wwwroot\fonts\FontAwesome.otf" />
+    <Content Include="wwwroot\images\AlongTheShadow.jpg" />
     <Content Include="wwwroot\images\arrow%402x.png" />
     <Content Include="wwwroot\images\arrow-gray%402x.png" />
     <Content Include="wwwroot\images\arrow-gray.png" />
@@ -58,6 +59,12 @@
     <Content Include="wwwroot\images\banner2.svg" />
     <Content Include="wwwroot\images\banner3.svg" />
     <Content Include="wwwroot\images\banner4.svg" />
+    <Content Include="wwwroot\images\ChildrenOfFire.jpeg" />
+    <Content Include="wwwroot\images\Colors.jpg" />
+    <Content Include="wwwroot\images\DivisionBell.jpg" />
+    <Content Include="wwwroot\images\EvilEmpire.jpg" />
+    <Content Include="wwwroot\images\FromMarsToSirus.jpg" />
+    <Content Include="wwwroot\images\HardWiredCover.jpeg" />
     <Content Include="wwwroot\images\icon-contact-envelope%402x.png" />
     <Content Include="wwwroot\images\icon-contact-envelope.png" />
     <Content Include="wwwroot\images\icon-contact-globe%402x.png" />
@@ -72,10 +79,26 @@
     <Content Include="wwwroot\images\icon-contact-phone.png" />
     <Content Include="wwwroot\images\icon-contact-user%402x.png" />
     <Content Include="wwwroot\images\icon-contact-user.png" />
+    <Content Include="wwwroot\images\ImagesAndWords.jpg" />
+    <Content Include="wwwroot\images\LambLiesDown.png" />
     <Content Include="wwwroot\images\logo%402x.png" />
     <Content Include="wwwroot\images\logo.png" />
+    <Content Include="wwwroot\images\LongColdWinter.jpg" />
+    <Content Include="wwwroot\images\LowTeens.jpg" />
+    <Content Include="wwwroot\images\OnceMoreRoundTheSun.jpg" />
+    <Content Include="wwwroot\images\RisingTide.jpg" />
+    <Content Include="wwwroot\images\ScreamBloodyGore.jpg" />
     <Content Include="wwwroot\images\select%402x.png" />
     <Content Include="wwwroot\images\select.png" />
+    <Content Include="wwwroot\images\slide-1.jpeg" />
+    <Content Include="wwwroot\images\slide-1.jpeg.png" />
+    <Content Include="wwwroot\images\slide-2.jpg" />
+    <Content Include="wwwroot\images\slide-2.jpg.png" />
+    <Content Include="wwwroot\images\slide-3.jpg" />
+    <Content Include="wwwroot\images\slide-3.jpg.png" />
+    <Content Include="wwwroot\images\TheAstonishing.jpg" />
+    <Content Include="wwwroot\images\TrickOfTheTail.jpg" />
+    <Content Include="wwwroot\images\Wovenwar.jpg" />
     <Content Include="wwwroot\index.html" />
     <Content Include="wwwroot\joinus.html" />
     <Content Include="wwwroot\js\app.js" />
