Modified the paginated list (now it actually works), added a third page with a single album inside and modified some of the content of the website itself

--- a/ReviewWebsite2017/ReviewWebsite2017.csproj
+++ b/ReviewWebsite2017/ReviewWebsite2017.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="wwwroot\images\FallingIntoInfinity.jpg" />
     <Content Include="wwwroot\images\Graphicloads-Colorful-Long-Shadow-Music.ico" />
     <Content Include="wwwroot\images\icon.jpg" />
     <Content Include="wwwroot\images\icon.png" />
